# Change Log
# All notable changes to this project will be documented in this file.
# This project adheres to [Semantic Versioning](http://semver.org/).
# includes Added / Changed / Fixed

## [3.0.0] UNRELEASED
### Added
- Upgraded to sql-wrapper v5.0.0dev
- Supported uvicorn 0.15
- Database model support asynchronous

### Changed
- Adjusted version range dependency packages

## [2.0.0] 2021-05-26
### Added
- Resource layer base class, support elegant RESTful CRUD
- Refactor core layer, support multi dotenv variables
- Handle metadata or context

## [1.2.1] 2021-03-22
### Changed
- Added custom route class support clear SQLAlchemy scoped session

## [1.2.0] 2021-03-21
### Changed
- Added custom APIRouter support clear SQLAlchemy scoped session

## [1.1.2] 2021-03-20
### Fixed
- Fixed close and remove session when FastAPI request completed
### Changed
- Added SQLAlchemy pool_recycle setting, default value is 2 hours

## [1.1.0] 2021-03-03
### Added
- Added timezone settings and utility
- RPC logging when defined log handler
- New model method bind to BaseModel: count() and get_fields()

## [1.0.3] 2021-02-20
### Fixed
- locked uvicorn version (0.12.3) to fixed runtime error

## [1.0.0] 2021-01-26
### Added
- Added db stub file to improve code intelligence
- Ensure db remove even though exception raised
### Fixed
- gRPC base tests lost `ProcessInterceptor`

## [0.7.3] 2021-01-14
### Added
- Added FastAPI Request GZip decompression

## [0.7.2] 2021-01-14
### Added
- GZipMiddleware

## [0.7.1] 2021-01-07
### Added
- Added gRPC interceptor process setup & teardown
- Added FastAPI middleware process setup & teardown

## [0.7.0] 2020-12-18
### Added
- Added cache backend with Redis
- Added dateparse utility
### Fixed
- Fixed add_XXXServiceServicer_to_server in GRPCTestBase

## [0.6.0] 2020-11-26
### Added
- Added bali Application Wrapper

## [0.5.3] 2020-11-23
### Added
- Added `to_dict()` method to BaseModel

## [0.5.2] 2020-11-23
### Fixed